--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,27 @@ body {
   max-width: 100vw;
 }
 
+
+
+/* main{
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+
+#root {
+  display: flex;
+  /* flex-direction: column; */
+  min-height: 100vh;
+  max-width: 100vw;
+  overflow: auto;
+}
+ */
+
+
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
