--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ body {
 
 #root {
   display: flex;
-  /* flex-direction: column; */
+  flex-direction: column;
   min-height: 100vh;
   max-width: 100vw;
   overflow: auto;
